--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,3 +1,4 @@
+// Colours
 $brand__main: #219EBC;
 $brand__alt: #023047;
 
@@ -6,3 +7,13 @@ $background__main: #E7ECEF;
 $font__main: #023047;
 $font__white: #ffffff;
 $font__highlight: rgba(251, 133, 0, 0.3);
+
+// Fonts
+$font__family__header: 'Sarabun';
+$font__family__body: 'Raleway';
+
+// Gutters
+$gutter__width: 1fr;
+
+// Layout
+$max__width: 1960px;
