--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,2 +1,10 @@
-@import 'mixins';
+@import 'reset';
 @import 'variables';
+@import 'mixins';
+@import 'fonts';
+
+body {
+    background-color: $background__main;
+    max-width: $max__width;
+    margin: 0 auto;
+}
