--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,6 +3,7 @@ $brand__main: #219EBC;
 $brand__alt: #023047;
 
 $background__main: #E7ECEF;
+$background__white: #ffffff;
 
 $font__main: #023047;
 $font__white: #ffffff;
@@ -17,3 +18,4 @@ $gutter__width: 1fr;
 
 // Layout
 $max__width: 1960px;
+$border__radius: 4px;
