--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,14 +1,12 @@
 h1, h2, h3 {
-    font-family: $font__family__header;
-    font-weight: 700;
+  font-family: $font__family__header;
+  font-weight: 700;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  line-height: normal;
 }
 
 h1 {
-    font-size: clamp(3rem, 7vmax, 5rem);
-
-    @include breakpoint-down(sm) {
-        font-size: 1.5rem;
-    }
+  font-size: clamp(2rem, 7vmax, 7rem);
 }
 
 h2 {
@@ -16,5 +14,10 @@ h2 {
 }
 
 h3 {
+  font-size: clamp(1.25rem, 1.75vmax, 1.875rem);
+  margin-bottom: 1.5rem;
+}
 
+p {
+  font-size: clamp(1rem, 1.5vmax, 1.5rem);
 }
