--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -7,4 +7,6 @@ body {
     background-color: $background__main;
     max-width: $max__width;
     margin: 0 auto;
+    color: $font__main;
+    font-family: $font__family__body;
 }
