--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,23 +1,46 @@
 h1, h2, h3 {
   font-family: $font__family__header;
-  font-weight: 700;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   line-height: normal;
+
+  font-weight: 700;
 }
 
 h1 {
   font-size: clamp(2rem, 7vmax, 7rem);
+  line-height: 0.9;
+  margin-bottom: 3rem;
 }
 
 h2 {
-
+  font-size: clamp(1.5rem, 4.5vmax, 5rem);
+  margin-bottom: 1rem;
 }
 
 h3 {
   font-size: clamp(1.25rem, 1.75vmax, 1.875rem);
   margin-bottom: 1.5rem;
+
+  span {
+    position: relative;
+    font-weight: 800;
+
+    &::after {
+      content: '';
+      display: block;
+      position: absolute;
+      top: 3px;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      background-color: rgba(251, 133, 0, 0.3);
+      transform: skew(-5deg);
+      z-index: -1;
+    }
+  }
 }
 
 p {
   font-size: clamp(1rem, 1.5vmax, 1.5rem);
+  line-height: 1.2;
 }
