--- a/src/components/local/about/about.module.scss
+++ b/src/components/local/about/about.module.scss
@@ -13,4 +13,12 @@
             line-height: 1;
         }
     }
+
+    &__image {
+
+        > div {
+            box-shadow: -10px 10px 4px rgba(0, 0, 0, 0.25);
+            border-radius: $border__radius;  
+        }
+    }
 }
