--- a/src/components/global/button/button.module.scss
+++ b/src/components/global/button/button.module.scss
@@ -7,6 +7,11 @@
     text-decoration: none;
     font-size: clamp(1rem, 1.5vmax, 1.5rem);
 
+    @include breakpoint-down(xs) {
+        font-size: 0.875rem;
+        padding: 0.5rem 0.75rem;
+    }
+
     + .button {
         margin-left: 1.5rem;
     }
