--- a/src/components/global/footer/footer.module.scss
+++ b/src/components/global/footer/footer.module.scss
@@ -8,6 +8,10 @@
     &__content {
         @include contain;
 
+        p {
+            font-size: 1rem;
+        }
+
         &__row {
             display: grid;
             grid-template-columns: repeat( 4, 1fr );
