--- a/src/components/local/hero/hero.module.scss
+++ b/src/components/local/hero/hero.module.scss
@@ -2,6 +2,14 @@
     @include contain--full;
     padding: 1rem 0 4rem 0;
 
+    @include breakpoint-down(lg) {
+        padding: 1rem 0 2rem 0;
+    }
+
+    @include breakpoint-down(md) {
+        padding: 2rem 0;
+    }
+
     &__top {
         display: grid;
         grid-template-columns: 60% 40%;
@@ -10,18 +18,42 @@
         &__text {
             grid-column: 1/2;
 
+            @include breakpoint-down(lg) {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                height: 100%;
+            }
+
             p {
                 margin-bottom: 1.25rem;
+
+                @include breakpoint-down(lg) {
+                    margin-bottom: 0;
+                }
             }
         }
 
         &__img {
             display: flex;
             grid-column: 2/3;
+
+            @include breakpoint-down(md) {
+                display: none;
+            }
         }
     }
 
     &__buttons {
         padding-top: 1rem;
+
+        @include breakpoint-down(lg) {
+            padding-top: 0;
+            margin-top: -2rem;
+        }
+
+        @include breakpoint-down(md) {
+            margin-top: 2rem;
+        }
     }
 }
