--- a/src/components/local/services/services.module.scss
+++ b/src/components/local/services/services.module.scss
@@ -2,6 +2,10 @@
     @include contain--full;
     padding: 4rem 0;
 
+    @include breakpoint-down(md) {
+        padding: 2rem 0;
+    }
+
     h3 {
         text-shadow: none;
     }
@@ -20,13 +24,19 @@
         justify-content: space-between;
         column-gap: 2rem;
         padding-bottom: 4rem;
+
+        @include breakpoint-down(sm) {
+            grid-template-columns: repeat(auto-fill, 125px);
+            justify-content: space-around;
+        }
     }
 
     &__image {
         display: flex;
+        margin-bottom: 1rem;
 
         svg {
-            display: flex;
+            height: auto;
         }
     }
 }
