--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -10,6 +10,10 @@ h1 {
   font-size: clamp(2rem, 7vmax, 7rem);
   line-height: 0.9;
   margin-bottom: 3rem;
+
+  @include breakpoint-down(lg) {
+    font-size: 3rem;
+  }
 }
 
 h2 {
@@ -20,6 +24,10 @@ h2 {
 h3 {
   font-size: clamp(1.25rem, 1.75vmax, 1.875rem);
   margin-bottom: 1.5rem;
+
+  @include breakpoint-down(sm) {
+    margin-bottom: 1rem;
+  }
 
   span {
     position: relative;
