--- a/src/components/global/footer/footer.module.scss
+++ b/src/components/global/footer/footer.module.scss
@@ -18,6 +18,11 @@
             justify-content: space-between;
             align-items: flex-start;
             padding-bottom: 4rem;
+
+            @include breakpoint-down(sm) {
+                grid-template-columns: repeat( 2, 1fr );
+                row-gap: 2rem;
+            }
         }   
 
         &__column {
@@ -27,6 +32,10 @@
 
             li {
                 padding: 0.5rem 0;
+
+                @include breakpoint-down(sm) {
+                    padding: 0.25rem 0;
+                }
 
                 a {
                     color: $font__main;
