--- a/src/components/local/portfolio/portfolio.module.scss
+++ b/src/components/local/portfolio/portfolio.module.scss
@@ -28,6 +28,7 @@
             @include breakpoint-down(sm) {
                 grid-column: 1;
                 margin-bottom: 1rem;
+                filter: drop-shadow(8px 8px 5px rgba(0, 0, 0, 0.25));
             }
         }
 
