--- a/src/components/local/portfolio/portfolio.module.scss
+++ b/src/components/local/portfolio/portfolio.module.scss
@@ -6,6 +6,10 @@
         padding: 2rem 0;
     }
 
+    @include breakpoint-down(xs) {
+        padding: 1rem 0 2rem 0;
+    }
+
     &__item {
         display: grid;
         grid-template-columns: 1fr 1fr;
