--- a/src/components/global/button/button.module.scss
+++ b/src/components/global/button/button.module.scss
@@ -14,5 +14,9 @@
 
     + .button {
         margin-left: 1.5rem;
+
+        @include breakpoint-down(xs) {
+            margin-left: 1rem;
+        }
     }
 }
