--- a/src/components/global/footer/footer.module.scss
+++ b/src/components/global/footer/footer.module.scss
@@ -10,6 +10,10 @@
 
         p {
             font-size: 1rem;
+
+            @include breakpoint-down(xs) {
+                font-size: 0.675rem;
+            }
         }
 
         &__row {
@@ -22,6 +26,10 @@
             @include breakpoint-down(sm) {
                 grid-template-columns: repeat( 2, 1fr );
                 row-gap: 2rem;
+            }
+
+            @include breakpoint-down(xs) {
+                padding-bottom: 2rem;
             }
         }   
 
