--- a/src/components/local/about/about.module.scss
+++ b/src/components/local/about/about.module.scss
@@ -8,10 +8,11 @@
     @include breakpoint-down(md) {
         padding: 2rem 0;
         grid-template-columns: 70% 30%;
+    }
 
-        @include breakpoint-down(xs) {
-            grid-template-columns: 100%;
-        }
+    @include breakpoint-down(xs) {
+        grid-template-columns: 100%;
+        padding: 1rem 0;
     }
 
     &__text {
