--- a/src/components/local/hero/hero.module.scss
+++ b/src/components/local/hero/hero.module.scss
@@ -10,10 +10,18 @@
         padding: 2rem 0;
     }
 
+    @include breakpoint-down(xs) {
+        padding: 2rem 0 1rem 0;
+    }
+
     &__top {
         display: grid;
         grid-template-columns: 60% 40%;
         align-items: flex-end;
+
+        @include breakpoint-down(xs) {
+            grid-template-columns: 100%;
+        }
 
         &__text {
             grid-column: 1/2;
@@ -54,6 +62,10 @@
 
         @include breakpoint-down(md) {
             margin-top: 2rem;
+        }
+
+        @include breakpoint-down(xs) {
+            margin-top: 1.5rem;
         }
     }
 }
