--- a/src/components/local/services/services.module.scss
+++ b/src/components/local/services/services.module.scss
@@ -6,6 +6,10 @@
         padding: 2rem 0;
     }
 
+    @include breakpoint-down(xs) {
+        padding: 1rem 0;
+    }
+
     h3 {
         text-shadow: none;
     }
@@ -28,6 +32,10 @@
         @include breakpoint-down(sm) {
             grid-template-columns: repeat(auto-fill, 125px);
             justify-content: space-around;
+        }
+
+        @include breakpoint-down(xs) {
+            padding-bottom: 2rem;
         }
     }
 
