--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,6 @@
 // Colours
 $brand__main: #219EBC;
-$brand__alt: #023047;
+$brand__alt: rgb(2, 48, 71);
 
 $background__main: #E7ECEF;
 $background__white: #ffffff;
