--- a/src/components/global/button/button.module.scss
+++ b/src/components/global/button/button.module.scss
@@ -6,6 +6,8 @@
     color: $font__white;
     text-decoration: none;
     font-size: clamp(1rem, 1.5vmax, 1.5rem);
+    transition: all .2s ease;
+    border: 1px solid $brand__alt;
 
     @include breakpoint-down(xs) {
         font-size: 0.875rem;
@@ -18,5 +20,10 @@
         @include breakpoint-down(xs) {
             margin-left: 1rem;
         }
+    }
+
+    &:hover {
+        border-radius: 12px;
+        background: $brand__alt;
     }
 }
