--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -42,8 +42,7 @@ h3 {
     position: relative;
     font-weight: 800;
 
-    &::after {
-      content: '';
+    > span {
       display: block;
       position: absolute;
       top: 3px;
