--- a/src/components/local/about/about.module.scss
+++ b/src/components/local/about/about.module.scss
@@ -22,6 +22,11 @@
             padding-right: 10%;
         }
 
+        @include breakpoint-down(sm) {
+            grid-column: 1/3;
+            padding-right: 0;
+        }
+
         h3 {
             text-shadow: none;
             line-height: 1;
@@ -30,7 +35,7 @@
 
     &__image {
 
-        @include breakpoint-down(xs) {
+        @include breakpoint-down(sm) {
             display: none;
         }
 
